# ToolsCloud

./: .gitignore  CMakeLists.txt  README.md
src/: cloud_intercept.cpp  cloud_intercept.h  cloud_metadata_paths.h  cloud_provider.h  cloud_provider_base.cpp  cloud_provider_base.h  cloud_storage.cpp  cloud_storage.h  common.h  dllmain.cpp  dpapi_util.h  google_drive.cpp  google_drive_provider.h  http_server.cpp  http_server.h  json.cpp  json.h  legacy_metadata_cleanup.cpp  legacy_metadata_cleanup.h  local_disk_provider.cpp  local_disk_provider.h  local_storage.cpp  local_storage.h  log.cpp  onedrive.cpp  onedrive_provider.h  protobuf.cpp  protobuf.h  remotecache_repair.cpp  remotecache_repair.h  rpc_handlers.cpp  rpc_handlers.h  steam_root_ids.h  vdf.cpp  vdf.h
ui/: .gitignore  App.xaml  App.xaml.cs  AssemblyInfo.cs  MainWindow.xaml  MainWindow.xaml.cs  ToolsCloud.csproj
ui/CloudRedirect.Tests/: AppInfoParserTests.cs  AppUpdaterTests.cs  BackupDiscoveryTests.cs  CloudCleanupRevertTests.cs  CloudRedirect.Tests.csproj  FileTokensParserTests.cs  FileUtilsTests.cs  LuaDetectionTests.cs  OrphanBlobServiceTests.cs  PayloadCryptoTests.cs  PeImportParserTests.cs  PeIntegrationTests.cs  PeSectionTests.cs  SignaturesTests.cs  SteamStoreClientTests.cs
ui/Converters/: UrlToImageSourceConverter.cs
ui/Pages/: AchievementsPage.xaml  AchievementsPage.xaml.cs  AppsPage.xaml  AppsPage.xaml.cs  ChoiceModePage.xaml  ChoiceModePage.xaml.cs  CleanupPage.xaml  CleanupPage.xaml.cs  CloudProviderPage.xaml  CloudProviderPage.xaml.cs  DashboardPage.xaml  DashboardPage.xaml.cs  HydraPage.xaml  HydraPage.xaml.cs  LudusaviPage.xaml  LudusaviPage.xaml.cs  ManifestPinningPage.xaml  ManifestPinningPage.xaml.cs  SaveHistoryPage.xaml  SaveHistoryPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  SetupPage.xaml  SetupPage.xaml.cs
ui/Resources/: LocExtension.cs  S.cs  Strings.es.resx  Strings.pt-BR.resx  Strings.resx
ui/Services/: AppInfoParser.cs  AppUpdater.cs  BackupDiscovery.cs  BackupListBuilder.cs  CloudCleanup.cs  CloudCleanupRevert.cs  CloudProviderClient.cs  ConfigHelper.cs  Dialog.cs  EmbeddedDll.cs  FileTokensParser.cs  FileUtils.cs  IUiCloudProvider.cs  LudusaviScanner.cs  OAuthService.cs  OrphanBlobService.cs  SaveHistoryService.cs  SaveVariantService.cs  SecureStorage.cs  SteamDetector.cs  SteamStoreClient.cs  UILogger.cs  UiCloudProviderFactory.cs
ui/Services/Patching/: Fingerprint.cs  PatchTypes.cs  Patcher.cs  PayloadCrypto.cs  PeImportParser.cs  Signatures.cs
ui/Services/Providers/: FolderUiCloudProvider.cs  GoogleDriveUiCloudProvider.cs  OneDriveUiCloudProvider.cs
ui/Windows/: DisclaimerWindow.xaml  DisclaimerWindow.xaml.cs
